# RetroCode

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  retro_config.yaml
docs/: reference.md  slides.html
examples/hypogen/: HYPOTHESES.md  results.json  results_features.py
src/: main.py  retro_config.py
src/analyzeme/: renderer.py  run.py  stats.py
src/contextEngineering/: __init__.py  config.py  curator.py  engine.py  interactive.py  reflector.py  trace_ingester.py
src/hypoGen/: __init__.py  community.py  labeler.py  run_pipeline.py  submitter.py  trace_parser.py
src/hypoGen/analyzer/: __init__.py  report.py
src/hypoGen/existing_hypothesis/: __init__.py  seed_features.py
src/hypoGen/generator/: __init__.py  hypothesis.py  propose.py
src/hypoGen/verifier/: __init__.py  verify.py
src/monitoring/: __init__.py  dashboard.html  depgraph.py  file_edit_extractor.py  server.py
src/skillsExport/: __init__.py  analyzer.py  exporter.py  generator.py  importer.py
src/utils/inference/: __init__.py  _anthropic.py  _commonstack.py  _gemini.py  _openai.py  _openrouter.py  base.py
src/utils/ingestion/: __init__.py  base.py  claude_reader.py  codex_reader.py  cursor_reader.py
src/utils/modification/: __init__.py  agents_md.py  base.py  claude_md.py  (+1 more)
tests/: conftest.py  test_curator.py  test_engine.py  test_inference.py  test_monitoring_file_edit_extractor.py  test_monitoring_server_chat.py  test_monitoring_server_guidance.py  test_skills_export.py  test_skills_import.py  test_trace_ingester.py
website/: package-lock.json  package.json
(+12 files in other folders)
